# look

./: .gitignore
research/: .gitignore  ComfyUI.md  faceswap.md  replicate.md  roboflow.md  sqlalchemy.md  todo.md  upscaling.md
research/auto1111/: api.md  characters.md  notes.md  questions.md  runpod.md  ssh.md  test_api.py  tips.md  todo.md
research/auto1111/api/: inpainting.py  options.py  settings.py  simple_inp.py  test_api.py
research/diffusion/: DLAI_course.md  GANs.md  SD_architecture.md  VAEs.md
research/diffusion/benchmarking/: benchmarks.md
research/diffusion/diffusers/: SD_mega.py  notes.md
research/diffusion/dreambooth/: dreambooth.md
research/diffusion/experimenting/: consistency.md  prompts.md  tips.md
research/diffusion/lora/: todo.md
research/experimenting/: README.md  cropper.py  cropperv2.py  main.py  pyproject.toml  requirements.txt  secourses_DB.md  train2.json
research/fine-tuning/: sam.md  sdxl.md
research/llms/: GPTfromscratch.md
research/prod_sd/: rv.md
research/pytorch/: pytorch.md  torchvision.md
research/segmentation/: .gitignore  SAM Notebook Overview.html  SAM.md  Untitled.ipynb  goals.md  how-to-segment-anything-with-sam.ipynb  notes.md  torchserve.md
research/shopify/: course.md  plan.md
services/klader/: package-lock.json  package.json
services/klader/app/: layout.tsx
services/marketplace-merchant/: package.json  shopify.app.toml  tsconfig.json
services/mobile_app/: .gitignore  App.tsx  AppOld.tsx  TestApp.js  USING.md  app.config.ts  clerk.md  demo.md  dump.json  dump.txt  e.txt  eas.json  extraction.md  index.js  inject.md  notes.md  onwards.md  package-lock.json  package.json  strategy.md  theme.ts  todo.md  tryiton.md  versioning.md
services/old-server/: queries.md
services/research/: ComfyUI.md  auth.md  controlnet.md  denoising.md  dreambooth.md  googledrive.md  lectures.md  lensa.md  lora.md  meshcapade.md  reading_papers.md  redditpost.md  sdxl.md  sqlalchemy.md  stablediffusion.md  test.md  thoughts.md  todo.md  tryiton.md
services/research/experimenting/: .gitignore  cropper.py  findBestImagesV2.py  gpus.md  pyproject.toml  train.json  try-it-on.ipynb  try-it-on.py
services/sam-server/: celery.md  main.py  pyproject.toml
services/sam-server/alembic/: env.py
services/sam-server/alembic/versions/: fad594771bc6_.py
services/scraper/: BaseParser.py  BaseTransformer.py  Basic.py  Crawler.py  Database.py  Loader.py  Scraper.py  Types.py  extract.py  load.py  main.py  notes.md  pyproject.toml  test.json  test.py  transform-and-load.py  transform.py
services/scraper/misc/: brands.txt  websites.txt
services/scraper/models/: __init__.py  burberry.py  gucci.py  hucci.py  loro_piana.py  loropiana.py  moncler.py  moncler2.py
services/scraper/parsers/: __init__.py  gucci.py  loropiana.py  loropiana2.py  tomford.py
services/scraper/tests/: benchmarks.txt
services/scraper/utils/: information.py
services/server/: .gitignore  Dockerfile  README.md  alembic.ini  authentication.md  deploy.md  docker-compose.yml  entrypoint.sh  notes.md  pyproject.toml  queries.md  rewrite.md  todo.md
services/server/alembic/versions/: 3e3d6ff9586e_add_a_column.py  dab6408bea5a_create_initial_tables.py  e699918baecb_create_account_table.py
services/server/app/: auth.py  config.py  db.py  main.py  utils.py
services/server/app/api/: crud.py  summaries.py  users.py
services/server/app/crud/: companies.py  companies_db.py  product_db.py  products.py  summaries.py  user_db.py  users.py  websites.py  withtortoise.py
services/server/app/database/: companies_db.py  company_db.py  db.py  models.py  product_db.py  user_db.py
services/server/app/legacy/: stuff.py
services/server/app/models/: product.py  pydantic.py  scripts.py  tortoise.py  user.py
services/server/app/pydantic/: models.py  requests.py  responses.py
services/server/app/routes/: companies.py  ping.py  products.py  summaries.py  users.py  websites.py
services/server/db/: 02_init_tables.sql  03_insert.sql  Dockerfile  old.sql  old_inserts.sql  testing.sql  website.sql
services/server/legacy/: stuff.py  users.py  users_crud.py
services/server/migrations/models/: 0_20230620113641_init.py  0_20230621075422_init.py  0_20230621145243_init.py  0_20230621190046_init.py
services/server/notes/: docker.md  notes.md
services/server/requests/: create_product.http  create_user.http  delete_product.http  get.http  like_product.http  lists.http
services/server/tests/: conftest.py  test_ping.py  test_products.py
services/shopify/: documentation.md  examples.ts  next.config.js  notes.md  package-lock.json  package.json
services/web_app/: next.config.js  package-lock.json  package.json  todo.md
services/website/: .gitignore  package-lock.json  package.json
(+330 files in other folders)
