[tool.poetry]
name = "experimenting"
version = "0.1.0"
description = ""
authors = ["holma91 <alexanderholmberg91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
replicate = "^0.8.3"
torch = "^2.0.1"
torchvision = "^0.15.2"
ipykernel = "^6.23.3"
matplotlib = "^3.7.1"
opencv-python = "^4.8.0.74"
pandas = "^2.0.3"
pillow = "^10.0.0"
torchaudio = "^2.0.2"
psutil = "^5.9.5"
pyyaml = "^6.0"
tqdm = "^4.65.0"
ultralytics = "^8.0.124"
gitpython = "^3.1.31"
sqlalchemy = "^2.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
