[tool.poetry]
name = "sam-server"
version = "0.1.0"
description = ""
authors = ["holma91 <alexanderholmberg91@gmail.com>"]
readme = "README.md"
packages = [{include = "sam_server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
celery = "^5.3.1"
redis = "^5.0.0"
flower = "^2.0.1"
sqlalchemy = "^2.0.20"
alembic = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
