[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "a web scraper that scrapes from selected fashion websites"
authors = ["holma91 <alexanderholmberg91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.5.4"
requests = "^2.28.2"
lxml = "^4.9.2"
pymongo = "^4.3.3"
sqlalchemy = "^2.0.10"
alembic = "^1.10.4"
boto3 = "^1.26.119"
psycopg2-binary = "^2.9.6"
pydantic = "^1.10.7"
aiohttp = "^3.8.4"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.5"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
