[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["holma91 <alexanderholmberg91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
asyncpg = "^0.27.0"
tortoise-orm = "^0.19.3"
aerich = "^0.7.1"
svix = "^1.4.12"
alembic = "^1.11.1"
pyhumps = "^3.8.0"



[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
