[tool.poetry]
name = "experimenting"
version = "0.1.0"
description = ""
authors = ["holma91 <alexanderholmberg91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
replicate = "^0.8.3"
torch = "^2.0.1"
torchvision = "^0.15.2"
ipykernel = "^6.23.3"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
